# shift

./: CMakeLists.txt  LICENSE  README.md
include/: shift.h
src/: CMakeLists.txt  shift.c  shift_internal.h
tests/: CMakeLists.txt  test_shift.c
